force-app/main/default/objects/ARCFileContentTypeMatrix__mdt/ARCFileContentTypeMatrix__mdt.object-meta.xml
<CustomObject>
    <label>ARCFileContentTypeMatrix</label>
    <pluralLabel>ARCFileContentTypeMatrixes</pluralLabel>
</CustomObject>