force-app/main/default/objects/ARCFileContentTypeMatrix__mdt/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to define the valid type of files with respect to object</description>
    <label>IsValid</label>
    <type>Checkbox</type>
</CustomField>