force-app/main/default/objects/ARCFileContentTypeMatrix__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>used to define the sobject name</description>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>