force-app/main/default/objects/ARCFileContentTypeMatrix__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>used to define the type of uploded file for particular sobject</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>